@@ -69,8 +69,8 @@ to timeout, it won't be able to update the status of the UPS. Whether or not
 this is a problem, depends on the NMC that it is connecting to. If the driver
 logs "Persistent connection not available" you're definitly at risk, since it
 will have to reconnect for each status update. If a persistent connection can
-be setup, the problem is mitigated because it will probably rarely have to
-reconnect.
+be setup (can be detected if neon >= 0.26.0), the problem is mitigated
+because it will probably rarely have to reconnect.
 
 Don't connect to the UPS through a proxy. Although it would be trivial to add
 support for proxies, this is not recommended and don't ask for it. Not only
