@@ -1,3 +1,8 @@
+Mon Apr  7 14:10:32 UTC 2008 / Arjen de Korte <arjen@de-korte.org>
+
+ - drivers/netxml-ups: require neon-0.25.0 or newer (essential
+   functionality won't be available in earlier versions)
+
 Mon Apr  7 12:50:47 UTC 2008 / Arjen de Korte <arjen@de-korte.org>
 
  - drivers/netxml-ups: some autoconf magic added to selectively build
